cluster/apps/firefly3/firefly-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: firefly-iii
    tier: frontend
