cluster/apps/firefly3/firefly-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-mysql
  labels:
    app: firefly-iii
spec:
  ports:
    - port: 3306
  selector:
    app: firefly-iii
    tier: mysql
  clusterIP: None
