cluster/apps/firefly3/firefly-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: "treafik"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-force-host: "true"
    kubernetes.io/ingress.class: traefik
  labels:
  name: firefly-iii-ingress
spec:
  rules:
  - host: "ff.butlr.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: firefly-iii
            port:
              number: 8080
  tls:
  - hosts:
    - "ff.butlr.org"
    secretName: ff.butlr.org-tls
